# src/routes/getTVDetails.ts
@@ -1,0 +1,8 @@
+//getTVDetails
+import { Router } from 'express';
+import { getTVDetails } from '../controllers/getTVDetails';
+
+const getTVDetailsRouter = Router();
+getTVDetailsRouter.get('/tv/details', getTVDetails);
+
+export { getTVDetailsRouter };
